<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:id="@+id/nav_quan_ly"
        android:icon="@drawable/baseline_store_24"
        android:title="@string/quan_ly" />

    <item android:id="@+id/nav_gioi_thieu"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/gioi_thieu"/>

    <group android:checkableBehavior="single">
        <item android:title="@string/khac">
            <menu>
                <item android:id="@+id/nav_logout"
                    android:icon="@drawable/baseline_logout_24"
                    android:title="@string/thoat"/>
            </menu>
        </item>
    </group>

</menu>