<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/ten_sp"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_ten_sp_add_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/ten_sp"
        android:layout_margin="5dp"
        android:textSize="@dimen/text_size"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/gia_sp"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_gia_sp_add_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/vnd"
        android:layout_margin="5dp"
        android:textSize="@dimen/text_size"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/sl_sp"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edt_sl_sp_add_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/ton_kho"
        android:layout_margin="5dp"
        android:textSize="@dimen/text_size"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_sv_add_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/luu"
            android:textSize="@dimen/btn_size"
            android:textColor="@color/black"
            android:textAllCaps="true"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/btn_out_add_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:text="@string/thoat"
            android:textSize="@dimen/btn_size"
            android:textColor="@color/black"
            android:textAllCaps="true"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>